--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
 Copyright &copy; {{ site.title }} 2017-2022.   </div>         
 
 <div class = "footer_div">  
-	Theme by <a href="https://robotkang.cc/">Robotkang</a> |
+	Theme by <a href="https://yangzhu.fun/">我很会养猪丶</a> |
             <!--<iframe
                 style="margin-left: 2px; margin-bottom:-5px;"
                 frameborder="0" scrolling="0" width="91px" height="20px"
