--- a/_includes/side-panel.html
+++ b/_includes/side-panel.html
@@ -3,7 +3,7 @@
 
 /* body {background-image:url(http://omjh2j5h3.bkt.clouddn.com/background.png);} */
 
-p.flower {background-image: url(http://omjh2j5h3.bkt.clouddn.com/background-cover.jpg); padding: 20px;}
+p.flower {background-image: url(https://raw.githubusercontent.com/770818354/-/master/image/download.7e7pqs2die40.webp); padding: 20px;}
 </style>
   
   <div class="panel-main">
