--- a/_includes/dashang.html
+++ b/_includes/dashang.html
@@ -34,7 +34,7 @@
     <div class="hide_box"></div>
     <div class="shang_box">
     	<a class="shang_close" href="javascript:void(0)" onclick="dashangToggle()" title="关闭"><img src="/dsimg/close.jpg" alt="取消" /></a>
-        <img class="shang_logo" src="/dsimg/logos.png" alt="亢志军" />
+        <img class="shang_logo" src="/dsimg/logos.png" alt="豆晨楠" />
     	<div class="shang_tit">
     		<p>感谢您的支持，我会继续努力的!</p>
     	</div>
