--- a/_includes/side-panel.html
+++ b/_includes/side-panel.html
@@ -13,7 +13,7 @@ p.flower {background-image: url(https://raw.githubusercontent.com/770818354/-/ma
         <!-- 头像效果-start -->
         <div class="ih-item circle effect right_to_left">            
             <a href="/#blog" title="前往 {{ site.title }} 的主页" class="blog-button">
-                <div class="img"><img src="https://raw.githubusercontent.com/770818354/-/master/image/prevsaaiew.4g0jyy9pg2k0.webp" alt="img"></div>
+                <div class="img"><img src="../images/IMG_2521.JPG" alt="img"></div>
                 <div class="info">
                     <div class="info-back">
                         <h1> 
