--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -89,18 +89,18 @@ layout: default
 <!--<a href="https://p.comworld.club/?aff=Q" target="_blank"><img src="https://robotkang-1257995526.cos.ap-chengdu.myqcloud.com/banner.jpg" width="100%" height="auto" alt="photos" display="block"/></a>-->
 
 <!--Google广告-->
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7648908799310520"
-     crossorigin="anonymous"></script>
+<!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7648908799310520"
+     crossorigin="anonymous"></script> -->
 <!-- 文章尾部 -->
-<ins class="adsbygoogle"
+<!-- <ins class="adsbygoogle"
      style="display:block"
      data-ad-client="ca-pub-7648908799310520"
      data-ad-slot="8099362936"
      data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
+     data-full-width-responsive="true"></ins> -->
+<!-- <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+</script> -->
 
 <br/>
 <p></p>
