--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -107,7 +107,7 @@ layout: default
 <!--评论-->
    <div class="comment"></div>
     
-    <script>
+    <!-- <script>
         new Valine({
             // AV 对象来自上面引入av-min.js(老司机们不要开车➳♡゛扎心了老铁)
             av: AV, 
@@ -121,8 +121,24 @@ layout: default
             pageSize:10,
             serverURLs: 'https://api.robotkang.cc',
         });
-    </script>
+    </script> -->
 
+<!-- my -->
+    <script>
+      new Valine({
+          // AV 对象来自上面引入av-min.js(老司机们不要开车➳♡゛扎心了老铁)
+          av: AV, 
+          el: '.comment', // 
+          app_id: 'yukBIwNt2MtAq9NHXagpfMOX-gzGzoHsz', // 这里填写上面得到的APP ID
+          app_key: 'MNdZfu6nIohskofglycTeI0z', // 这里填写上面得到的APP KEY
+          placeholder: 'ヾﾉ≧∀≦)o来啊，快活啊哈!', // [v1.0.7 new]留言框占位提示文字
+          avatar:'wavatar',
+          path:window.location.pathname,
+          guest_info:['nick','mail','link'] ,
+          pageSize:10,
+          serverURLs: 'https://yukbiwnt.lc-cn-n1-shared.com',
+      });
+  </script>
 
 
 
